--- a/app/globals.css
+++ b/app/globals.css
@@ -31,3 +31,43 @@ body {
     text-wrap: balance;
   }
 }
+
+.question-card {
+  border: 2px solid #e2e8f0;
+  border-radius: 0.5rem;
+}
+/* Option */
+.option2 label {
+  transition: background-color 0.3s ease;
+}
+/* .option2 input[type='radio']:checked + label {
+  background-color: #4caf50;
+  color: white;
+} */
+/* Navigation Buttons */
+#prevBtn:hover,
+#nextBtn:hover {
+  background-color: #4caf50;
+}
+/* Question List */
+.question-list a:hover {
+  color: #4caf50;
+}
+.option2 input[type='radio'] {
+  display: none;
+}
+.option2 label {
+  /* display: inline-block; */
+  background-color: #d1d1d1;
+  padding: 4px 11px;
+  font-family: Arial;
+  font-size: 18px;
+  cursor: pointer;
+}
+.option2 input[type='radio']:checked + label {
+  background-color: #76cf9f;
+}
+
+/* .option2 input[type='radio']:checked + li {
+  background-color: #76cf9f;
+} */
